crates/plurimus_widgets/tests/snapshots/tab_bar_style__tab_bar_active_overridden.snap
---
source: crates/plurimus_widgets/tests/tab_bar_style.rs
expression: composed_styled_frame(&app)
---
 Diary  Plan        
--
aaaaaaabbbbbbaaaaaaa
a: fg:Some(Reset) bg:Some(Reset) mods:NONE
b: fg:Some(Red) bg:Some(Blue) mods:NONE
