crates/plurimus_widgets/tests/snapshots/tab_bar_style__tab_bar_boxed_active.snap
---
source: crates/plurimus_widgets/tests/tab_bar_style.rs
expression: composed_styled_frame(&app)
---
┌───────┐┌──────┐   
│ Diary ││ Plan │   
└───────┘└──────┘   
--
aaaaaaaaaaaaaaaaaaaa
aaaaaaaaaaabbbbaaaaa
aaaaaaaaaaaaaaaaaaaa
a: fg:Some(Reset) bg:Some(Reset) mods:NONE
b: fg:Some(Reset) bg:Some(Reset) mods:BOLD | UNDERLINED
